--- a/client/package.json
+++ b/client/package.json
@@ -3,5 +3,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
+  },
+  "dependencies": {
+    "add": "^2.0.6",
+    "vite": "^4.5.14"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.5.0"
   }
 }
