--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "add": "^2.0.6",
-    "vite": "^4.5.14"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.5.0"
+    "@vitejs/plugin-react": "^4.5.0",
+    "vite": "^4.5.14"
   }
 }
